@@ -1,6 +1,6 @@
 package org.ilgcc.app.file_transfer;
 
-import static org.ilgcc.app.utils.enums.TransmissionStatus.*;
+import static org.ilgcc.app.utils.enums.TransmissionStatus.Complete;
 
 import com.google.gson.Gson;
 import formflow.library.data.Submission;
@@ -9,8 +9,8 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.HashMap;
@@ -20,7 +20,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.ilgcc.app.config.DocumentTransferConfiguration;
 import org.ilgcc.app.data.Transmission;
 import org.ilgcc.app.data.TransmissionRepositoryService;
-import org.ilgcc.app.utils.enums.FileNameUtility;
+import org.ilgcc.app.utils.FileNameUtility;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.env.Environment;
 import org.springframework.stereotype.Service;
@@ -47,10 +47,11 @@ public class DocumentTransferRequestService implements DocumentTransferRequest {
     
     @Override
     public void sendDocumentTransferServiceRequest(String presignedUrl, Submission submission, String fileName, UUID transmissionId)
-            throws IOException {
+            throws IOException, URISyntaxException {
         Transmission transmission = transmissionRepositoryService.findById(transmissionId);
-        HttpURLConnection httpUrlConnection = httpUrlConnectionFactory.createHttpURLConnection(new URL(documentTransferServiceUrl));
+        HttpURLConnection httpUrlConnection = httpUrlConnectionFactory.createHttpURLConnection(new URI(documentTransferServiceUrl).toURL());
         String jsonString = createJsonRequestBody(presignedUrl, submission, fileName);
+
         try (OutputStream os = httpUrlConnection.getOutputStream()) {
             byte[] input = jsonString.getBytes(StandardCharsets.UTF_8);
             os.write(input, 0, input.length);
